Exercício 8: Corrige configuração para deploy manual

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,8 +40,8 @@ services:
       PURGER_PUBLIC_SITES: "['tremt.localhost']"
 
   varnish:
-    build:
-      context: devops/varnish
+    image: ghcr.io/ybsides/tremt-varnish:latest
+    platform: linux/amd64
     labels:
       - traefik.enable=true
       - traefik.constraint-label=public
@@ -50,10 +50,8 @@ services:
     depends_on:
       - backend
   frontend:
-    build:
-      context: ./frontend
-      args:
-        - VOLTO_VERSION=${VOLTO_VERSION}
+    image: ghcr.io/ybsides/tremt-frontend:latest
+    platform: linux/amd64
     environment:
       RAZZLE_INTERNAL_API_PATH: http://backend:8080/Plone
     depends_on:
@@ -76,10 +74,8 @@ services:
       - traefik.http.routers.rt-frontend-internal.service=svc-frontend
 
   backend:
-    build:
-      context: ./backend
-      args:
-        - PLONE_VERSION=${PLONE_VERSION}
+    image: ghcr.io/ybsides/tremt-backend:latest
+    platform: linux/amd64
     environment:
       RELSTORAGE_DSN: "dbname='${DB_NAME:-plone}' user='${DB_NAME:-plone}' host='${DB_HOST:-db}' password='${DB_PASSWORD:-kpldVBmrANUY}' port='${DB_PORT:-5432}'"
     depends_on:
