--- a/frontend/packages/volto-tremt-site/package.json
+++ b/frontend/packages/volto-tremt-site/package.json
@@ -26,8 +26,12 @@
     "release-major-alpha": "release-it major --preRelease=alpha",
     "release-alpha": "release-it --preRelease=alpha"
   },
-  "addons": [],
-  "dependencies": {},
+  "addons": [
+    "@kitconcept/volto-light-theme"
+  ],
+  "dependencies": {
+    "@kitconcept/volto-light-theme": "7.2.0"
+  },
   "peerDependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
